--- a/css/core-style.css
+++ b/css/core-style.css
@@ -59,14 +59,14 @@ h3,
 h4,
 h5,
 h6 {
-    color: #3a3a3a;
+    color: #505050;
     line-height: 1.2;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
 }
 
 p {
-    color: #9f9f9f;
+    color: #3a3a3a;
     font-size: 1em;
     line-height: 1.9;
     font-family: 'Roboto', sans-serif;
