Fix the bug of missing numbers in ordered list

--- a/css/core-style.css
+++ b/css/core-style.css
@@ -1290,3 +1290,8 @@ textarea.form-control {
 .copywrite-text p > a {
     color: #fff;
 }
+
+ol li{
+        list-style-type:decimal;
+        list-style-position:inside;
+}
