multiple updates (discussion hidden)

--- a/css/core-style.css
+++ b/css/core-style.css
@@ -1308,3 +1308,7 @@ ol li{
         list-style-type:decimal;
         list-style-position:inside;
 }
+
+.gazette-post-discussion-area{
+    display:none;
+}
